# AutoFlowAI

./: .gitignore  README.md  README2.md  REPAIR_REPORT.md  STARTUP_GUIDE.md  TEST_SCENARIOS.md
AutoFlowElectron/: index.html  main.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renderer.js  styles.css  test_fetch.js
open-mcp-client/: README.md  README.txt
open-mcp-client/agent/: db.py  email_server.py  math_server.py  pyproject.toml  rag_manager.py  schedule_server.py  server.py  stderr.txt  stdout.txt  tavily_server.py  test_db.py
open-mcp-client/agent/sample_agent/: agent.py
open-mcp-client/app/: layout.tsx  page.tsx
open-mcp-client/app/components/: MCPConfigForm.tsx
