[tool.poetry]
name = "sample_agent"
version = "0.1.0"
description = "Starter"
authors = ["Markus Ecker <markus.ecker@gmail.com>"]
license = "MIT"

[project]
name = "sample_agent"
version = "0.0.1"
dependencies = [
    "apscheduler>=3.11.2,<4.0.0",
    "bcrypt>=5.0.0,<6.0.0",
    "chromadb>=1.0.0,<2.0.0",
    "langchain-openai>=0.2.1",
    "langchain-anthropic>=0.2.1",
    "langchain>=0.3.1",
    "openai>=1.51.0",
    "langchain-community>=0.3.1",
    "copilotkit==0.1.39",
    "uvicorn>=0.31.0",
    "python-dotenv>=1.0.1",
    "langchain-core>=0.3.25",
    "langgraph-cli[inmem]>=0.1.64",
    "langchain-mcp-adapters==0.0.3",
    "langchain-text-splitters>=0.3.0",
    "langchain-ollama>=0.2.0,<0.3.0",
    "langchain-google-genai>=2.0.0,<3.0.0",
    "google-generativeai>=0.8.6,<0.9.0",
    "mcp>=1.8.0",
    "fastmcp>=0.4.1",
    "langgraph>=0.3.5",
    "fastapi>=0.115.0",
    "dateparser>=1.2.0,<2.0.0",
    "pypdf>=5.0.0,<7.0.0",
    "docx2txt>=0.8,<0.10",
    "watchdog>=4.0.0,<7.0.0",
    "python-multipart>=0.0.9,<0.1.0",
    "fastembed>=0.4.0",
    "pytz>=2024.1",
    "requests>=2.32.0",
    "tavily-python>=0.7.17,<0.8.0"
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sample_agent"]
py-modules = [
    "db",
    "email_server",
    "math_server",
    "rag_manager",
    "schedule_server",
    "server",
    "tavily_server"
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
apscheduler = ">=3.11.2,<4.0.0"
bcrypt = ">=5.0.0,<6.0.0"
chromadb = ">=1.0.0,<2.0.0"
langchain-openai = "^0.2.1"
langchain-anthropic = "^0.2.1"
langchain = "^0.3.1"
openai = "^1.51.0"
langchain-community = "^0.3.1"
copilotkit = "0.1.39"
uvicorn = "^0.31.0"
python-dotenv = "^1.0.1"
langchain-core = "^0.3.25"
langgraph-cli = {extras = ["inmem"], version = "^0.1.64"}
langchain-mcp-adapters = "0.0.3"
langchain-text-splitters = "^0.3.0"
langchain-ollama = ">=0.2.0,<0.3.0"
langchain-google-genai = ">=2.0.0,<3.0.0"
google-generativeai = ">=0.8.6,<0.9.0"
mcp = ">=1.8.0"
fastmcp = "^0.4.1"
langgraph = "^0.3.5"
fastapi = "^0.115.0"
dateparser = ">=1.2.0,<2.0.0"
pypdf = ">=5.0.0,<7.0.0"
docx2txt = ">=0.8,<0.10"
watchdog = ">=4.0.0,<7.0.0"
python-multipart = ">=0.0.9,<0.1.0"
fastembed = ">=0.4.0"
pytz = "^2024.1"
requests = "^2.32.0"
tavily-python = ">=0.7.17,<0.8.0"

[tool.poetry.scripts]
demo = "sample_agent.demo:main"
